--- a/jai-gokhale.html
+++ b/jai-gokhale.html
@@ -25,16 +25,16 @@
 
             <main role="main" class="inner cover">
                 
-                <img class="profile" src="images/Headshots/Jai_Gokhale.png" alt="image of tait loughridge posing with a ceramic bust of his creation">
+                <img class="profile" src="images/Headshots/Jai_Gokhale.png" alt="Jai Gokhale">
 
                 <h1>Jai Gokhale</h1>
-                <div class='bio_container'>
+                <div class="bio_container">
                     <p class="bio">
-                        about me
+                        I am an aspiring software engineer familiar with leading technologies, languages and programming practices. I particularly enjoy working on JavaScript and Python projects.
                     </p>
 
                     <p class="bio">
-                        about me
+                        Prior to my journey as a software engineer, I worked as a field engineer for an oil and gas services company. Leveraging key problem solving and troubleshooting abilities from my past career, I am dedicated to providing creative solutions to modern software development challenges.
                     </p>
                 </div>
             </main>
