Adding comments to JS

--- a/mappage.html
+++ b/mappage.html
@@ -20,7 +20,7 @@
         </a>
         <nav class="nav nav-masthead justify-content-center">
           <form class="searchHead mr-4 justify-content-center">
-          <input id="anotherCountry" class="form-control mr-2 searchHead" type="text" placeholder="Snake Another?" aria-label="Search">
+          <input id="anotherCountry" class="form-control mr-2 searchHead match-list" type="text" placeholder="Snake Another?" aria-label="Search">
           <button id="submitButton" class="btn btn-outline-success mx-2 mx-sm-1" type="submit">Search</button>
           </form>
             <a class="nav-link active" href="index.html">Home</a>
