added error handling for pexel api

--- a/mappage.html
+++ b/mappage.html
@@ -20,8 +20,9 @@
         </a>
         <nav class="nav nav-masthead justify-content-center">
           <form class="searchHead mr-4 justify-content-center">
-          <input id="anotherCountry" class="form-control mr-2 searchHead match-list" type="text" placeholder="Snake Another?" aria-label="Search">
-          <button id="submitButton" class="btn btn-outline-success mx-2 mx-sm-1" type="submit">Search</button>
+          
+          <a class="btn btn-outline-success mx-2 mx-sm-1" type="link" href="index.html">Snake Another</a>
+          <button id="anotherRandom" class="btn btn-outline-success mx-2 mx-sm-1" type="submit">Random Search</button>
           </form>
             <a class="nav-link active" href="index.html">Home</a>
             <a class="nav-link" data-toggle="modal" data-target="#staticBackdrop">Features</a>
