fixed broken LinkedIn link

--- a/about_us.html
+++ b/about_us.html
@@ -72,7 +72,7 @@
                         <p class="bio"><span class="snakeColor">Area of Interest:</span> HTML, CSS, React</p>
                     <div class="d-inline-flex">
                         <a type="button" class="col-lg-6 btn btn-secondary snakeButton mr-2" href="https://github.com/rynoschni">GitHub</a>
-                        <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="https://github.com/rynoschni">LinkedIn</a>
+                        <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="https://www.linkedin.com/in/ryan-schniederjan/">LinkedIn</a>
                     </div>
                     <div class="biobtn py-2">
                       <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="ryan-schniederjan.html">Bio</a>
