--- a/about_us.html
+++ b/about_us.html
@@ -4,12 +4,7 @@
     <title>Team H-Town</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <!-- <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.css"
-    /> -->
+    
     <link rel="stylesheet" href="css/about_us.css" />
     <link rel="shortcut icon"tra href="favicon.ico"/>
   </head>
@@ -56,7 +51,7 @@
                 <img class="img-thumbnail rounded-circle" src="/images/Headshots/Luke_Brazil.png" />
                       <p class="bio"><span class="snakeColor">Name:</span> Luke Brazil</p>
                       <p class="bio"><span class="snakeColor">Title:</span> Full Stack Developer</p>
-                      <p class="bio"><span class="snakeColor">Area of Interest:</span> HTML, CSS, JQuary</p>
+                      <p class="bio"><span class="snakeColor">Area of Interest:</span> HTML, CSS, jQuery</p>
                   <div class="d-inline-flex">
                       <a type="button" class="col-lg-6 btn btn-secondary snakeButton mr-2" href="https://github.com/LukeBrazil">GitHub</a>
                       <a type="button" class="col-lg-6 btn btn-secondary snakeButton" href="https://www.linkedin.com/in/luke-brazil-0506b71b0/">LinkedIn</a>
