Revert "removed toast"
This reverts commit 1ff65e5f787cb8927697412828b61c16589d46ac.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,16 @@
                     </div>
                 </div>
             </div>
-
+<!-- Toast messages -->
+<div id="myToast" class="toast">
+    <div class="toast-header">
+        <!-- <img src="favicon.ico" class="rounded mr-2" alt=""> -->
+        <strong class="mr-auto">Global <span class="snakeColor">Snake</span> Alert</strong>
+        <small id="toastTime"></small>
+    </div>
+    <div id="myToastBody" class="toast-body">
+    </div>
+</div>
     
             <footer class="mastfoot mt-auto">
                 <div class="inner">
